# Nglycosylation-revival

./: .gitignore  AGENTS.md  Makefile  README.md  STUDY.md  pyproject.toml
data/: README.md
data/processed/: comparator_constraint_metrics.tsv  comparator_gene_table.tsv  nglyco_architecture_features.tsv  nglyco_conservation_metrics.tsv  nglyco_constraint_metrics.tsv  nglyco_disease_annotations.tsv  nglyco_fst_per_gene.tsv  nglyco_gene_gene_edges.tsv  nglyco_gene_table.tsv  nglyco_gene_table_hg19.tsv  (+5 more)
scripts/: _test_ensembl_api.py  add_nglyco_clinvar_layer.py  add_nglyco_gwas_trait_layer.py  analyze_conservation_gradient.py  analyze_constraint_gradient.py  analyze_expression_essentiality.py  analyze_interface_essentiality_regression.py  analyze_loeuf_regression.py  analyze_popgen_gradient.py  audit_downstream_gwas_candidates.py  build_comparator_constraint.py  build_comparator_gene_table.py  build_gwas_null_model.py  build_nglyco_architecture_features.py  build_nglyco_conservation_metrics.py  build_nglyco_constraint_summary.py  build_nglyco_disease_seed_table.py  build_pathway_null_model.py  compute_dnds_nglyco.py  compute_fst_pbs.py  create_agentic_task_prompt.py  extract_pophuman_ihs.py  fetch_popgen_data.py  glycome_variance_partitioning.py  inspect_agentic_system.py  plot_disease_architecture.py  plot_figure1_architecture.py  plot_figure3c_regression.py  plot_figure5_comparators.py  plot_figure6_evidence_matrix.py  plot_nglyco_constraint_network.py  plot_nglyco_pathway_network.py  review_downstream_gwas_loci.py
workflow/: agentic_paper_system.json
(+83 files in other folders)
