[project]
name = "personal-glycosylation"
version = "0.1.0"
description = "Reproducible analyses and figures for N-glycosylation evolutionary architecture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "networkx>=3.3",
    "pandas>=2.2",
    "pybigwig>=0.3.25",
    "pysam>=0.24.0",
    "scikit-allel>=1.3.13",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[tool.uv]
package = false
